[package]
name = "simplelog-config"
version = "0.1.0"
authors = ["XenoCorn"]
edition = "2018"
description = "Extending the simplelog library to configure it"
readme = "README.md"
repository = "https://github.com/xenocorn/simplelog-config.git"
license = "GPL-3.0"

[dependencies]
    log = "0.4"
    simplelog = "0.10"
    serde = { version = "1.0", features = ["derive"] }
